Change ITN -> MSC; some obvious formatting mods

--- a/PartB1.tex
+++ b/PartB1.tex
@@ -2,15 +2,15 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
-% Generic ITN style
-\usepackage[ACRONYM]{itn}
+% Generic DN style
+\usepackage[ACRONYM]{msca-dn}
 
 % Common between all documents
 \input{common}
 
 \begin{document}
 
-\itnpage{START PAGE}
+\mscpage{START PAGE}
 {\small\tableofcontents}
 \note{Table of Contents should be one page, but bear in mind it's across two documents}
 
