--- a/PartB2.tex
+++ b/PartB2.tex
@@ -2,8 +2,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
-% Generic ITN style
-\usepackage[ACRONYM]{itn}
+% Generic DN style
+\usepackage[ACRONYM]{msca-dn}
 
 % Common between all documents
 \input{common}
@@ -14,7 +14,7 @@
 \setcounter{section}{3}
 \setcounter{page}{34}
 
-% \itnpage{START PAGE}
+% \mscpage{START PAGE}
 \tableofcontents
 
 % Part B2 sections
@@ -23,7 +23,7 @@
 % \include{ethics} No longer required
 \include{letters}
 
-\itnpage{END PAGE}
+\mscpage{END PAGE}
 
 \end{document}
 
