--- a/common.tex
+++ b/common.tex
@@ -9,9 +9,9 @@
 \usepackage{wrapfig}
 
 % Citations
-\addbibresource{itn-refs.bib}
+\addbibresource{msc-refs.bib}
 
-% The total number of ESRs
+% The total number of researchers
 \newcommand{\researchercount}{ten\xspace}
 
 %%% Local Variables:
