--- a/excellence.tex
+++ b/excellence.tex
@@ -8,9 +8,9 @@
 \note{it should be explained how the individual projects of the recruited researchers will be integrated into --- and contribute to --- the overall research programme. All proposals should describe the research projects in the context of a doctoral training programme.  Are the objectives measurable and verifiable? Are they realistically achievable?}
 
 
-\itncaption{Table 1.1: Work Package (WP) List}
+\msccaption{Table 1.1: Work Package (WP) List}
 \note{The WP names are defined in common.tex}
-\begin{itntable}{|>{\ra}p{10mm}|>{\ra}p{35mm}|>{\ra}p{15mm}|>{\ra}p{10mm}|>{\ra}p{10mm}|>{\ra}p{20mm}|>{\ra}p{20mm}|>{\ra}p{25mm}|}
+\begin{msctable}{|>{\ra}p{10mm}|>{\ra}p{35mm}|>{\ra}p{15mm}|>{\ra}p{10mm}|>{\ra}p{10mm}|>{\ra}p{20mm}|>{\ra}p{20mm}|>{\ra}p{25mm}|}
     \colorrow
     \hline
     \textbf{WP No.} &
@@ -20,11 +20,11 @@
     \textbf{End Month} &
     \textbf{Activity Type} &
     \textbf{Lead Beneficiary Short Name} &
-    \textbf{ESR Involvement} \\
+    \textbf{Researcher Involvement} \\
     \hline
     &&&&&&& \\
     \hline
-\end{itntable}
+\end{msctable}
 
 \newpage
 \subsection{Soundness of the proposed methodology}
@@ -38,8 +38,8 @@
 
 \subsubsection{Overview and content structure of the doctoral training programme}
 
-\itncaption{Table 1.3a: Recruitment Deliverables per Beneficiary}
-\begin{itntable}{|>{\ra}p{30mm}|>{\ra}p{30mm}|>{\ra}p{30mm}|>{\ra}p{30mm}|>{\ra}p{30mm}|}
+\msccaption{Table 1.3a: Recruitment Deliverables per Beneficiary}
+\begin{msctable}{|>{\ra}p{30mm}|>{\ra}p{30mm}|>{\ra}p{30mm}|>{\ra}p{30mm}|>{\ra}p{30mm}|}
     \colorrow
     \hline
     \textbf{Researcher No.} &
@@ -52,10 +52,10 @@
     \hline
     Total & & & & XXX \\
     \hline
-    \end{itntable}
+    \end{msctable}
 
-\itncaption{Table 1.3b: Main Network-Wide Training Events, Conferences and Contribution of Beneficiaries}
-\begin{itntable}{|>{\ra}p{10mm}|>{\ra}p{85mm}|>{\ra}p{20mm}|>{\ra}p{20mm}|>{\ra}p{20mm}|}
+\msccaption{Table 1.3b: Main Network-Wide Training Events, Conferences and Contribution of Beneficiaries}
+\begin{msctable}{|>{\ra}p{10mm}|>{\ra}p{85mm}|>{\ra}p{20mm}|>{\ra}p{20mm}|>{\ra}p{20mm}|}
     \colorrow
     \hline &
     \textbf{Main Training Events \& Conferences} &
@@ -65,7 +65,7 @@
     \hline
     &&&& \\
     \hline
-\end{itntable}
+\end{msctable}
 
 
 \subsubsection{Qualifications and supervision experience of supervisors}
