--- a/impact.tex
+++ b/impact.tex
@@ -17,13 +17,13 @@ b) developing sustainable elements of doctoral programmes}
 have for citizens. Activities must be strategically planned, with clear objectives, start at the outset and continue through the lifetime of the project. The description of the communication activities needs to state the main messages as well as the tools and channels that will be used to reach out to each of the chosen target groups.}
 
 
-\itncaption{Table 2.1: The overall communication and dissemination plan of \project }
-\begin{itntable}{|>{\ra}p{40mm}|>{\ra}p{120mm}|}
+\msccaption{Table 2.1: The overall communication and dissemination plan of \project }
+\begin{msctable}{|>{\ra}p{40mm}|>{\ra}p{120mm}|}
     \colorrow\hline
     \textbf{Target Audience} &
     \textbf{Mode of communication} \\
     \hline
-\end{itntable}
+\end{msctable}
 
 
 \subsubsection{Strategy for the management of intellectual property}
