--- a/organisations.tex
+++ b/organisations.tex
@@ -3,7 +3,7 @@
 
 % Please leave this template here, duplicate it for each organisation
 \note{%
-\begin{itntable}{|>{\ra}p{40mm}|>{\ra}p{130mm}|}
+\begin{msctable}{|>{\ra}p{40mm}|>{\ra}p{130mm}|}
     \colorrow
     \hline
     \multicolumn{2}{|l|}{\textbf{Beneficiary Legal Name:} Name of organisation} \\
@@ -16,13 +16,13 @@
     \hline
     \textbf{Status of Research Premises} & \\
     \hline
-    \textbf{Previous Involvement in Research and Training Programmes, including ITN} & \\
+    \textbf{Previous Involvement in Research and Training Programmes, including DN} & \\
     \hline
-    \textbf{Current Involvement in Research and Training Programmes, including ITN} & \\
+    \textbf{Current Involvement in Research and Training Programmes, including DN} & \\
     \hline
     \textbf{Relevant Publications and/or Research / Innovation Product} & \\
     \hline
-\end{itntable}
+\end{msctable}
 }
 
 
@@ -30,7 +30,7 @@
 \newpage
 % Please leave this template here, duplicate it for each organisation
 \note{%
-\begin{itntable}{|>{\ra}p{40mm}|>{\ra}p{130mm}|}
+\begin{msctable}{|>{\ra}p{40mm}|>{\ra}p{130mm}|}
     \colorrow
     \hline
     \multicolumn{2}{|l|}{\textbf{Associated Partner Legal Name:} Name of organisation} \\
@@ -45,5 +45,5 @@
     \hline
     \textbf{Relevant Publications / datasets / software / Innovation product / other achievements} & \\
     \hline
-\end{itntable}
+\end{msctable}
 }
