--- a/participants.tex
+++ b/participants.tex
@@ -1,7 +1,7 @@
 \section*{LIST OF PARTICIPATING ORGANISATIONS}
 \note{List of participants.  Max 2 pages}
 
-\begin{itntable}{|>{\ra}p{25mm}|>{\ra}p{25mm}|c|c|>{\ra}p{12mm}|c|>{\ra}p{25mm}|>{\ra}p{20mm}|>{\ra}p{20mm}|}
+\begin{msctable}{|>{\ra}p{25mm}|>{\ra}p{25mm}|c|c|>{\ra}p{12mm}|c|>{\ra}p{25mm}|>{\ra}p{20mm}|>{\ra}p{20mm}|}
     \colorrow
     \hline
     \textbf{Consortium member} &
@@ -23,7 +23,7 @@
     \colorrow
     \textbf{Associated partners linked to a beneficiary} &&&&&&&& \\
     \hline
-\end{itntable}
+\end{msctable}
 
 %Notes:
 %\begin{compactenum}
