--- a/quality.tex
+++ b/quality.tex
@@ -6,21 +6,21 @@
 \subsubsection{Work Packages description}
 \note{please include table 3.1a}
 
-\itncaption{Table 3.1a: Description of Work Packages}
+\msccaption{Table 3.1a: Description of Work Packages}
 
 % Generic template
 \note{%}
-\begin{itnwp}{MX -- MY}{Title}{Lead}
-    \itnwppar{Objectives}{%
+\begin{mscwp}{MX -- MY}{Title}{Lead}
+    \mscwppar{Objectives}{%
     }\\
     \hline    
-    \itnwppar{Description of Work and Role of Specific Beneficiaries / Associated partners}{%
+    \mscwppar{Description of Work and Role of Specific Beneficiaries / Associated partners}{%
     }\\
-    \itnwptask{Task name}{Task description}\\
+    \mscwptask{Task name}{Task description}\\
     \hline
-    \itnwppar{Description of Deliverables}{%
+    \mscwppar{Description of Deliverables}{%
     }\\
-\end{itnwp}
+\end{mscwp}
 }
 
 
@@ -42,8 +42,8 @@
     \item[CI] Classified: classified information as intended in Commission Decision 2001/844/EC
     \end{compactdesc}
 }
-\itncaption{Table 3.1b: Deliverables List}
-\begin{itntable}{|>{\ra}p{15mm}|>{\ra}p{50mm}|>{\ra}p{15mm}|>{\ra}p{20mm}|>{\ra}p{15mm}|>{\ra}p{15mm}|>{\ra}p{15mm}|}
+\msccaption{Table 3.1b: Deliverables List}
+\begin{msctable}{|>{\ra}p{15mm}|>{\ra}p{50mm}|>{\ra}p{15mm}|>{\ra}p{20mm}|>{\ra}p{15mm}|>{\ra}p{15mm}|>{\ra}p{15mm}|}
     \hline
     \colorrow
     \multicolumn{7}{|l|}{\textbf{Scientific Deliverables}} \\
@@ -58,8 +58,8 @@
     \textbf{Due Date} \\
     \hline
     % Split it here if need be
-\end{itntable}
-\begin{itntable}{|>{\ra}p{15mm}|>{\ra}p{50mm}|>{\ra}p{15mm}|>{\ra}p{20mm}|>{\ra}p{15mm}|>{\ra}p{15mm}|>{\ra}p{15mm}|}
+\end{msctable}
+\begin{msctable}{|>{\ra}p{15mm}|>{\ra}p{50mm}|>{\ra}p{15mm}|>{\ra}p{20mm}|>{\ra}p{15mm}|>{\ra}p{15mm}|>{\ra}p{15mm}|}
     \hline
     \colorrow
     \multicolumn{7}{|l|}{\textbf{Management, Training, Recruitment and Dissemination Deliverables}} \\
@@ -73,13 +73,13 @@
     \textbf{Dissem. Level} &
     \textbf{Due Date} \\
     \hline
-\end{itntable}
+\end{msctable}
 
 \subsubsection{List of major milestones}
 
-\itncaption{Table 3.1c: Milestones List}
+\msccaption{Table 3.1c: Milestones List}
 
-\begin{itntable}{|>{\ra}p{15mm}|>{\ra}p{50mm}|>{\ra}p{15mm}|>{\ra}p{20mm}|>{\ra}p{15mm}|>{\ra}p{35mm}|}
+\begin{msctable}{|>{\ra}p{15mm}|>{\ra}p{50mm}|>{\ra}p{15mm}|>{\ra}p{20mm}|>{\ra}p{15mm}|>{\ra}p{35mm}|}
     \hline
     \colorrow
     \textbf{Number} &
@@ -89,25 +89,25 @@
     \textbf{Due Date} &
     \textbf{Means of Verification} \\
     \hline
-\end{itntable}
+\end{msctable}
 
 \subsubsection{Fellow's individual projects, including secondment plan}
 
-\itncaption{Table 3.1d: Individual Research Projects}
+\msccaption{Table 3.1d: Individual Research Projects}
 
 \note{%
-\begin{itnrp}
+\begin{mscrp}
     X & X & X & X & X & X \\
     \hline
-    \itnrppar{Project Title and Work Package(s) to which it is related}{
+    \mscrppar{Project Title and Work Package(s) to which it is related}{
     }\\ \hline
-    \itnrppar{Objectives}{%
+    \mscrppar{Objectives}{%
     }\\ \hline
-    \itnrppar{Expected results}{%
+    \mscrppar{Expected results}{%
     }\\ \hline
-    \itnrppar{Planned secondment(s)}{%
+    \mscrppar{Planned secondment(s)}{%
     }\\
-\end{itnrp}
+\end{mscrp}
 }
 
 
@@ -119,15 +119,15 @@
 \subsubsection{Risk management}
 \note{at consortium level (including table 3.2a)}
 
-\itncaption{Table 3.1e: Implementation Risks}
-\begin{itntable}{|>{\ra}p{60mm}|>{\ra}p{15mm}|>{\ra}p{90mm}|}
+\msccaption{Table 3.1e: Implementation Risks}
+\begin{msctable}{|>{\ra}p{60mm}|>{\ra}p{15mm}|>{\ra}p{90mm}|}
     \hline
     \colorrow
     \textbf{Description of risk} (likelihood / severity) &
     \textbf{WPs involved} &
     \textbf{Proposed risk-mitigation measures} \\
     \hline
-\end{itntable}
+\end{msctable}
 
 \subsubsection{Intellectual Property Rights (IPR)}
 
