Stylistic things; gitignore

--- a/msca-dn.sty
+++ b/msca-dn.sty
@@ -49,6 +49,8 @@
 \rfoot{}
 \cfoot{Part B - Page \thepage\ of \pageref{LastPage}}
 \setlength{\headheight}{15.2pt}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0pt}
 
 % TOC needs to fit on one page
 \setcounter{tocdepth}{3}
