Update to 2022 as far as the excellence section

--- a/excellence.tex
+++ b/excellence.tex
@@ -1,42 +1,59 @@
 \section{Excellence}
 \note{Should start on page 5; aim for 10 to 12 pages.}
+\note{
+    Excellence - aspects to be taken into account.
+    \begin{compactitem}
+        \item Quality and pertinence of the project’s research and innovation objectives (and the extent towhich they are ambitious, and go beyond the state of the art).
+        \item Soundness of the proposed methodology (including interdisciplinary approaches, consideration of the gender dimension and other diversity aspects if relevant for the research project, and the quality and appropriateness of open science practices).
+        \item Quality and credibility of the training programme (including transferable skills, inter/multidisciplinary, inter-sectoral and gender as well as other diversity aspects).
+        \item Quality of the supervision (including mandatory joint supervision for industrial and joint doctorate projects).
+    \end{compactitem}
+}
 
 \subsection{Quality and pertinence of the project's research and innovation objectives}
 \note{and the extent to which they are ambitious, and go beyond the state of the art}
 
 \subsubsection{Introduction, objectives and overview of the research programme}
-\note{it should be explained how the individual projects of the recruited researchers will be integrated into --- and contribute to --- the overall research programme. All proposals should describe the research projects in the context of a doctoral training programme.  Are the objectives measurable and verifiable? Are they realistically achievable?}
+\note{It should be explained how the individual projects of the recruited researchers will be integrated into --- and contribute to --- the overall research programme. All proposals should describe the research projects in the context of a doctoral training programme.  Are the objectives measurable and verifiable? Are they realistically achievable?}
 
+\subsubsection{Pertinence and innovative aspects of the research programme}
+\note{in light of the current state of the art and existing programmes / networks / doctoral research trainings.}
+\note{Describe how your project goes beyond the state-of-the-art, and the extent the proposed work is ambitious.}
 
-\msccaption{Table 1.1: Work Package (WP) List}
-\note{The WP names are defined in common.tex}
-\begin{msctable}{|>{\ra}p{10mm}|>{\ra}p{35mm}|>{\ra}p{15mm}|>{\ra}p{10mm}|>{\ra}p{10mm}|>{\ra}p{20mm}|>{\ra}p{20mm}|>{\ra}p{25mm}|}
-    \colorrow
-    \hline
-    \textbf{WP No.} &
-    \textbf{WP Title} &
-    \textbf{Lead Beneficiary No.} &
-    \textbf{Start Month} &
-    \textbf{End Month} &
-    \textbf{Activity Type} &
-    \textbf{Lead Beneficiary Short Name} &
-    \textbf{Researcher Involvement} \\
-    \hline
-    &&&&&&& \\
-    \hline
-\end{msctable}
-
-\newpage
 \subsection{Soundness of the proposed methodology}
 \note{including interdisciplinary approaches, consideration of the gender dimension and other diversity aspects if relevant for the research project, and the quality and appropriateness of open science practices}
 
-\subsubsection{Research data management and management of other research outputs}
+\subsubsection{Overall methodology:}
+\note{Describe and explain the overall methodology including the concepts,
+models and assumptions that underpin your work. Explain how this will enable you to deliver your project’s objectives. Refer to any important challenges you may have identified in the chosen methodology and how you intend to overcome them.}
 
-% Should be 1.3 as of 2021
+\subsubsection{Integration of methods and disciplines to pursue the objectives:}
+\note{Explain how expertise and methods from different disciplines will be brought together and integrated in pursuit of your objectives. If you consider that an inter-disciplinary approach is unnecessary in the context of the proposed work, please provide a justification.}
+
+\subsubsection{Gender dimension and other diversity aspects:}
+\note{Describe how the gender dimension and other diversity aspects are taken into account in the project’s research and innovation content. If you do not consider such a gender dimension to be relevant in your project, please provide a justification.}
+
+\subsubsection{Open science practices:}
+\note{Describe how appropriate open science practices are implemented as
+an integral part of the proposed methodology. Show how the choice of practices and their implementation are adapted to the nature of your work, in a way that will increase the chances of the project delivering on its objectives. If you believe that none of these practices are appropriate for your project, please provide a justification here.}
+
+\subsubsection{Research data management and management of other research outputs:}
+\note{Applicants generating/collecting data and/or other research outputs (except for publications) during the project must provide maximum 1 page on how the data will be managed in line with the FAIR principles (Findable, Accessible, Interoperable, Reusable), addressing the following (the description should be specific to your project):
+\begin{compactitem}
+    \item Types of data/research outputs/research outputs (e.g. experimental, observational, images, text, numerical) and their estimated size; if applicable, combination with, and provenance of, existing data.
+    \item Findability of data/research outputs: Types of persistent and unique identifiers (e.g. digital object identifiers) and trusted repositories that will be used.
+    \item Accessibility of data/research outputs: IPR considerations and timeline for open access (if open access not provided, explain why); provisions for access to restricted data for verification purposes.
+    \item Interoperability of data/research outputs: Standards, formats and vocabularies for data and metadata.
+    \item Reusability of data/research outputs: Licenses for data sharing and re-use (e.g. Creative Commons, Open Data Commons); availability of tools/software/models for data generation and validation/interpretation /re-use.
+    \item Curation and storage/preservation costs; person/team responsible for data management and quality assurance.
+\end{compactitem}
+}
+
 \subsection{Quality and credibility of the training programme}
-\note{including transferable skills, inter/multi-disciplinary, inter-sectoral and, where appropriate, gender aspects}
+\note{including transferable skills, inter/multi-disciplinary, inter-sectoral and gender as well as other aspects}
 
 \subsubsection{Overview and content structure of the doctoral training programme}
+\note{including network-wide training events and complementarity with those programmes offered locally at the participating organisations (please include table 1.3a and table 1.3b).}
 
 \msccaption{Table 1.3a: Recruitment Deliverables per Beneficiary}
 \begin{msctable}{|>{\ra}p{30mm}|>{\ra}p{30mm}|>{\ra}p{30mm}|>{\ra}p{30mm}|>{\ra}p{30mm}|}
@@ -67,21 +84,19 @@
     \hline
 \end{msctable}
 
+\subsubsection{Role of non-academic sector in the training programme}
+
+\subsection{Quality of the supervision}
+\note{including mandatory joint supervision for industrial and joint doctorate projects}
 
 \subsubsection{Qualifications and supervision experience of supervisors}
 
-
 \subsubsection{Quality of the joint supervision arrangements}
-\note{mandatory for EID and EJD}
-\note{Would make sense here to emphasise the multidisciplinarity - add a table?}
+\note{including mandatory joint supervision for DN-ID and DN-JD}
 
-\subsubsection{Contribution of all participating organisations to the research and training programme}
-
-
-\subsubsection{Synergies between participating organisations}
-
-\subsubsection{Exposure of recruited researchers to different (research)
-  environments, and the complementarity thereof}
+\note{\textbf{Supervision}
+Employers and/or funders should ensure that a person is clearly identified to whom researchers can refer for the performance of their professional duties, and should inform the researchers accordingly.
+Such arrangements should clearly define that the proposed supervisors are sufficiently expert in supervising research, have the time, knowledge, experience, expertise and commitment to be able to offer the research doctoral candidate appropriate support and provide for the necessary progress and review procedures, as well as the necessary feedback mechanisms.}
 
 %%% Local Variables:
 %%% mode: latex
