--- a/participants.tex
+++ b/participants.tex
@@ -12,7 +12,7 @@
     \rotatebox[origin=c]{90}{\parbox{17mm}{\textbf{Country}}} &
     \textbf{Dept. / Division / laboratory} &
     \textbf{Scientist-in-charge} &
-    \textbf{Role of partner organisation} \\
+    \textbf{Role of associated partner} \\
     \hline
     \colorrow
     \textbf{Beneficiaries} &&&&&&&& \\
@@ -28,6 +28,23 @@
 %Notes:
 %\begin{compactenum}
 %\end{compactenum}
+
+\subsubsection*{Data for non-academic beneficiaries:}
+% 180 - 9*5 = 135mm
+\begin{msctable}{|>{\ra}p{12mm}|>{\ra}p{12mm}|>{\ra}p{12mm}|>{\ra}p{12mm}|>{\ra}p{12mm}|>{\ra}p{39mm}|>{\ra}p{12mm}|>{\ra}p{12mm}|>{\ra}p{12mm}|}
+    \colorrow
+    \hline
+    \textbf{Name} &
+    \textbf{Location of research premises} &
+    \textbf{Type of R\&D activities} &
+    \textbf{No. of full-time employees} &
+    \textbf{No. of employees in R\&D} &
+    \textbf{Web site} &
+    \textbf{Annual turnover} &
+    \textbf{Entreprise status} &
+    \textbf{SME status} \\
+    \hline
+\end{msctable}
 
 \newpage
 \centerline{Page left blank for consistent page count.}
