--- a/quality.tex
+++ b/quality.tex
@@ -6,7 +6,25 @@
 \subsubsection{Work Packages description}
 \note{please include table 3.1a}
 
-\msccaption{Table 3.1a: Description of Work Packages}
+\msccaption{Table 3.1a: Work Package (WP) List}
+\note{The WP names are defined in common.tex}
+\begin{msctable}{|>{\ra}p{10mm}|>{\ra}p{35mm}|>{\ra}p{15mm}|>{\ra}p{10mm}|>{\ra}p{10mm}|>{\ra}p{20mm}|>{\ra}p{20mm}|>{\ra}p{25mm}|}
+    \colorrow
+    \hline
+    \textbf{WP No.} &
+    \textbf{WP Title} &
+    \textbf{Lead Beneficiary No.} &
+    \textbf{Start Month} &
+    \textbf{End Month} &
+    \textbf{Activity Type} &
+    \textbf{Lead Beneficiary Short Name} &
+    \textbf{Researcher Involvement} \\
+    \hline
+    &&&&&&& \\
+    \hline
+\end{msctable}
+
+\msccaption{Table 3.1b: Description of Work Packages}
 
 % Generic template
 \note{%}
