And update the implact

--- a/impact.tex
+++ b/impact.tex
@@ -1,48 +1,51 @@
 \section{Impact}
 
-\subsection{Contribution to structuring doctoral training at the European level and to strengthening European innovation capacity}
-\note{a) meaningful contribution of the non-academic sector to the doctoral training, as appropriate to the implementation mode and research field
-b) developing sustainable elements of doctoral programmes}
+\note{
+    \textbf{Impact – aspects to be taken into account}
+    \begin{compactitem}
+        \item Contribution to structuring doctoral training at the European level and to strengthening European innovation capacity, including the potential for: a) meaningful contribution of the non-academic sector to the doctoral training, as appropriate to the implementation mode and research field b) developing sustainable elements of doctoral programmes.
+        \item Credibility of the measures to enhance the career perspectives and employability of researchers and contribution to their skills development.
+        \item Suitability and quality of the measures to maximise expected outcomes and impacts, as set out in the dissemination and exploitation plan, including communication activities.
+        \item The magnitude and importance of the project’s contribution to the expected scientific, societal and economic impacts.
+    \end{compactitem}
+}
 
+\subsection{Contribution to structuring doctoral training at the European level and to strengthening European innovation capacity}
+\note{Including the potential for: a) meaningful contribution of the non-academic sector to the doctoral training, as appropriate to
+the implementation mode and research field, this could include (non exhaustively) e.g. meaningful exposure of Doctoral Candidates to the non-academic sector through secondments, contribution of the non-academic sector to the research and the transferable skills training.
+b) developing sustainable elements of doctoral programmes after the end of the DN funding, this could include (non exhaustively) e.g. sustainability of training programmes at local or network-wide level, sustainable cooperation and secondment opportunities, sustainability of
+transferable skills training offering, sustainability of researchers recruitment according to the code of conduct for the recruitment of researchers.}
 
 \subsection{Credibility of the measures to enhance the career perspectives and employability of researchers and contribution to their skills development}
 \note{In this section, please explain the impact of the research and training on the fellows' careers.}
 
+\subsection{Suitability and quality of the measures to maximise expected outcomes and impacts, as set out in the dissemination and exploitation plan, including communication activities}
 
-\subsection{Quality of the proposed measures to exploit and disseminate the results}
+\subsubsection{Plan for the dissemination and exploitation activities, including communication activities:}
+\note{Describe the planned measures to maximise the impact of your project by providing a first version of your ‘plan for the dissemination and exploitation including communication activities’. Describe the dissemination, exploitation and communication measures that are planned, the target group(s) addressed (e.g. scientific community, end users, financial actors, public at large), with objectives, and how these activities and the fulfilment of these objectives will be monitored.}
 
-\subsubsection{Plan for the dissemination and exploitation activities, including communication activities}
+\subsubsection{Strategy for the management of intellectual property, foreseen protection measures}
+\note{such as patents, design rights, copyright, trade secrets, etc., and how these would be used to support exploitation.}
 
-\note{Describe the planned measures to maximise the impact of your project by providing a first version of your ‘plan for the dissemination and exploitation including communication activities’. Regarding communication measures and public engagement strategy, the aim is to inform and reach out to society and show the activities performed, and the use and the benefits the project will
-have for citizens. Activities must be strategically planned, with clear objectives, start at the outset and continue through the lifetime of the project. The description of the communication activities needs to state the main messages as well as the tools and channels that will be used to reach out to each of the chosen target groups.}
-
-
-\msccaption{Table 2.1: The overall communication and dissemination plan of \project }
-\begin{msctable}{|>{\ra}p{40mm}|>{\ra}p{120mm}|}
-    \colorrow\hline
-    \textbf{Target Audience} &
-    \textbf{Mode of communication} \\
-    \hline
-\end{msctable}
+\note{\textbf{Dissemination, Exploitation of Results}
+All researchers should ensure, in compliance with their contractual arrangements, that the results of their research are disseminated and exploited, e.g. communicated, transferred into other research settings or, if appropriate, commercialised. Senior researchers, in particular, are expected to take a lead in ensuring that research is fruitful and that results are either exploited commercially or made accessible to the public (or both) whenever the opportunity arises.
+\textbf{Public Engagement}
+Researchers should ensure that their research activities are made known to society at large in such a way that they can be understood by non-specialists, thereby improving the public's understanding of
+science. Direct engagement with the public will help researchers to better understand public interest in priorities for science and technology and also the public's concerns.}
 
 
-\subsubsection{Strategy for the management of intellectual property}
-
-\subsection{The magnitude and importance of the project’s contribution to the expected scientific societal and economic impacts}
+\subsection{The magnitude and importance of the project’s contribution to the expected scientific societal and economic impacts (project’s pathways towards impact)}
+\note{Provide a narrative explaining how the project’s results are expected to make a difference in terms of impact, beyond the immediate scope and duration of the project. The narrative should include
+the components below, tailored to your project.}
 
 \subsubsection{Expected scientific impact}
-
 \note{e.g. contributing to specific scientific advances, across and
 within disciplines, creating new knowledge, reinforcing scientific equipment and instruments, computing systems (i.e. research infrastructures)}
 
 \subsubsection{Expected economic/technological impact}
-
-\note{e.g. bringing new products, services, business
-processes to the market, increasing efficiency, decreasing costs, increasing profits, contributing to standards’ setting, etc.}
-
+\note{e.g. bringing new products, services, business processes to the market, increasing efficiency, decreasing costs, increasing profits, contributing to standards’ setting, etc.}
 
 \subsubsection{Expected societal impact}
-
 \note{decreasing CO2 emissions, decreasing avoidable mortality, improving policies and decision-making, raising consumer awareness}
 
 
